Bug 35972 - Small size icon setting is ignored.
Summary: Small size icon setting is ignored.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.4.0 Beta1
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: bibisected35 bibisected35older target...
Keywords: regression
: 36891 38157 42831 44892 46680 (view as bug list)
Depends on:
Blocks: Icon-Themes Options-Dialog-View
  Show dependency treegraph
 
Reported: 2011-04-04 19:36 UTC by Kohei Yoshida
Modified: 2017-09-25 07:56 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2011-04-04 19:36:58 UTC
In Gnome, with fresh configuration, go to the Options dialog, and set the size of the icons to 'Small'.  The icons remain large.

This appears to happen when the current icon size is set to 'Automatic'.  Playing with the setting again and again eventually lets you have the small icons.  But there appears to be quirks.

I believe you did the work on automatic icon size detection, Thorsten?
Comment 1 Kohei Yoshida 2011-04-04 19:43:53 UTC
I forgot to say that this is relevant to the 3.4 build.  The 3.3 build works as expected.
Comment 2 Rainer Bielefeld Retired 2011-05-22 08:47:18 UTC
[Reproducible] with "LibreOffice 3.4.0RC1  – WIN7  Home Premium  (64bit) German UI [OOO340m1 (Build:11)]", I have the contrary effect that change from small to big Tango (Atomatic) icons will not be accepted. As reported size property works if style is set to Tango without Automatic.

I modified Version due to report date and Status to Assigned due to facts.
Comment 3 vitriol 2011-06-10 08:33:53 UTC
*** Bug 36891 has been marked as a duplicate of this bug. ***
Comment 4 vitriol 2011-06-10 08:34:38 UTC
*** Bug 38157 has been marked as a duplicate of this bug. ***
Comment 5 Björn Michaelsen 2011-12-23 13:28:26 UTC
Target 3.4 seems to be optimistic, doesnt it? I propose re- or untargeting.
Comment 6 Kohei Yoshida 2012-01-06 18:15:54 UTC
I'll just un-target this.
Comment 7 vitriol 2012-01-17 10:40:55 UTC
*** Bug 42831 has been marked as a duplicate of this bug. ***
Comment 8 vitriol 2012-02-27 07:04:33 UTC
*** Bug 46680 has been marked as a duplicate of this bug. ***
Comment 9 Thomas Arnhold 2012-04-11 04:47:21 UTC
*** Bug 44892 has been marked as a duplicate of this bug. ***
Comment 10 Not Assigned 2012-06-08 06:36:35 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=595be045da4f868eb2df8f937446e6ae2f81cca8&g=libreoffice-3-6

fdo#35972: toolbarmanager must be aware of changes in SvtMiscOptions


It will be available in LibreOffice 3.6.
Comment 11 Not Assigned 2012-06-08 06:37:00 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1829efaf9f5d9af9d51b01d273c7b6c60970b05d

fdo#35972: toolbarmanager must be aware of changes in SvtMiscOptions
Comment 12 Ivan Timofeev (retired) 2012-06-08 06:40:32 UTC
Looks like a regression from http://cgit.freedesktop.org/libreoffice/core/commit/?id=3dc5bef2459e2d8981a06cb9d69a4481bcd91dbd
Should be fixed now.
Comment 13 Stefan Knorr 2012-06-08 11:25:43 UTC
Thanks, Ivan! This will make my regular theme testing/comparison sessions much less painful.
Comment 14 Not Assigned 2012-06-11 08:11:24 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e9b63535e426068435d36fbe9a70817950a55ef3&g=libreoffice-3-5

fdo#35972: toolbarmanager must be aware of changes in SvtMiscOptions


It will be available in LibreOffice 3.5.5.
Comment 15 Rainer Bielefeld Retired 2012-08-03 09:12:17 UTC
We need exact and correct target information for automated lists in Wiki and LibO Web Site.
Comment 16 Rpnpif 2017-08-18 09:46:54 UTC
I reopened this issue because nothing was fixed, particularly with the bug #42831.

Seen on LO 5.4.0.3.
Comment 17 Thorsten Behrens (allotropia) 2017-08-30 02:38:22 UTC
not actively working on this
Comment 18 Xisco Faulí 2017-09-24 19:34:46 UTC
(In reply to Rpnpif from comment #16)
> I reopened this issue because nothing was fixed, particularly with the bug
> #42831.
> 
> Seen on LO 5.4.0.3.

Dear Rpnpif,
This bug has been in RESOLVED FIXED status for more than 6 months.
If the issue is still reproducible with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/, please report a new issue in https://bugs.documentfoundation.org/enter_bug.cgi providing, if needed, the steps and documents to reproduce it.
Thanks for your understanding and collaboration.
Closing as RESOLVED FIXED
Comment 19 Rpnpif 2017-09-25 07:56:06 UTC
Yes, this bug was fixed for me in :

Version: 5.4.1.2
Build ID: ea7cb86e6eeb2bf3a5af73a8f7777ac570321527

Thanks.