fdo#35972: toolbarmanager must be aware of changes in SvtMiscOptions

Change-Id: Ie6e3036e83b5ea859e2c73df47629eb79791a52c